# JNI_Demo

./: gradle.properties  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/szsszwl/jnipro/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: HelloWorld.c  HelloWorld.h  exceptionThrow.c  overflow.c
app/src/main/java/com/szsszwl/jnipro/: DensityUtils.java  ExceptionThrowActivity.java  HelloWorld.java  LocalRefOverflowActivity.java  MainActivity.java  ScreenUtils.java  TabTestActivity.java
app/src/main/java/com/szsszwl/jnipro/view/: HorizontalAutoScrollLayout.java  MyAdapter.java  MyBaseAdapter.java  NestFullListView.java  NestFullListViewAdapter.java  NestFullViewHolder.java  SwitchTabView.java  ToastUtils.java
app/src/main/res/color/: rb_text_select_affect.xml
app/src/main/res/drawable/: inner_border.xml  out_border.xml  rb_selected.xml  rb_selector_affect.xml  rb_unselected.xml
app/src/main/res/layout/: activity_main.xml  exception_throw_activity.xml  item.xml  local_ref_overflow_activity.xml  switch_tab.xml  tab_view.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/test/java/com/szsszwl/jnipro/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
